added inofficial guide to footer

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -11,3 +11,5 @@
     link: /imprint/
   - name: Privacy
     link: /privacy/
+  - name: Inofficial Guide
+    link: http://www.download-makervsvirus.de/
