--- a/_data/organisations.yml
+++ b/_data/organisations.yml
@@ -10,4 +10,6 @@
   link: https://www.coronavirusmakers.org
 - name: 3dk Against Corona
   link: https://tutolino.net/3d-printing-against-corona/
+- name: Open Source COVID19 Medical Supplies Facebook Group
+  link: https://www.facebook.com/groups/opensourcecovid19medicalsupplies/
 # Copy the block above and repeat =)
