--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,3 @@
-- name: give
-  link: https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=DDNN7VEK2PNWW&source=url
-  new_window: false
-  highlight: false
 - name: About
   link: /about/
   new_window: false
@@ -10,3 +6,7 @@
   link: /contact/
   new_window: false
   highlight: false
+- name: give
+  link: https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=DDNN7VEK2PNWW&source=url
+  new_window: true
+  highlight: true
