--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ google_analytics_key: UA-161636011-1
 google_maps_javascript_api_key:
 disqus_shortname:
 
-slack_invite_link: "https://join.slack.com/t/makervsvirus/shared_invite/zt-d1sas6kj-pxXYwgFrDz14ilsL7ME~Mw"
+slack_invite_link: "https://join.slack.com/t/makervsvirus/shared_invite/zt-d78epuip-5c4U2EXbscuIIjflT~kAIQ"
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
