ADD 3dk and CoViVent

--- a/_data/equipments.yml
+++ b/_data/equipments.yml
@@ -8,4 +8,8 @@
   link: https://www.thingiverse.com/thing:4233193
 - name: Fabric face mask
   link: https://naehtalente.de/mundschutz-selber-naehen/
+- name: 3dk Against Corona
+  link: https://tutolino.net/3d-printing-against-corona/  
+- name: CoVi-Vent (noch <b>under construction</b>!)
+  link: http://covivent.de/
 # Copy the block above and repeat =)
