FIX footer text

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -7,9 +7,9 @@
     link: /guides/
   - name: Presse
     link: /press/
-  - name: Imprint
+  - name: Impressum
     link: /imprint/
-  - name: Privacy
+  - name: Datenschutz
     link: /privacy/
   - name: Inofficial Guide
     link: http://www.download-makervsvirus.de/
