--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # ----
 # Site
 
-title: Hydra Template
-url: "https://proud-alligator.cloudvent.net"
+title: CMidas
+url: "https://https://cmidasx.github.io/"
 baseurl:
 google_analytics_key:
 google_maps_javascript_api_key:
