updated logos and fonts

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ disqus_shortname:
 environment: production
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
-logo: images/cmidas_logo.png
+logo: images/cmidas_logo.svg
 description: 
 author:
   name:
