--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site
 
 title: Solidity Language Portal
-url: "https://proud-alligator.cloudvent.net"
+url: "https:soliditylang.org"
 baseurl:
 google_analytics_key:
 google_maps_javascript_api_key:
@@ -10,7 +10,7 @@ disqus_shortname:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
-description: Solidity Language Portal.
+description: Solidity Language Portal
 author:
   name: Solidity team
   email: solidity@ethereum.org
