--- a/_config.yml
+++ b/_config.yml
@@ -34,8 +34,7 @@ paginate_path: "/blog/:num/"
 permalink: pretty
 
 defaults:
-  -
-    scope:
+  - scope:
       path: ""
       type: "posts"
     values:
@@ -44,8 +43,7 @@ defaults:
         content:
           width: 1500
           height: 2500
-  -
-    scope:
+  - scope:
       path: ""
       type: "staff_members"
     values:
@@ -53,18 +51,15 @@ defaults:
         image_path:
           width: 600
           height: 600
-  -
-    scope:
+  - scope:
       path: ""
     values:
       layout: "page"
-  -
-    scope:
+  - scope:
       path: "index.html"
     values:
       layout: "default"
-  -
-    scope:
+  - scope:
       path: "contact.html"
     values:
       full_width: true
@@ -89,16 +84,16 @@ exclude:
 # -----------
 # CloudCannon
 
-social_icons:
-  - Facebook
-  - Google Plus
-  - Instagram
-  - LinkedIn
-  - Pinterest
-  - Tumblr
-  - Twitter
-  - YouTube
-  - RSS
+_select_data:
+  social_icons:
+    - Facebook
+    - Instagram
+    - LinkedIn
+    - Pinterest
+    - Tumblr
+    - Twitter
+    - YouTube
+    - RSS
 
 _comments:
   map: Update the map location and display settings.
