--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,24 +1,12 @@
 - name: Pricing
-  link: /pricing/
-  new_window: false
-  highlight: false
-- name: Blog
-  link: /blog/
-  new_window: false
-  highlight: false
-- name: About
-  link: /about/
-  new_window: false
-  highlight: false
-- name: Contact
-  link: /contact/
+  link: /#pricing
   new_window: false
   highlight: false
 - name: Login
-  link: /
-  new_window: true
+  link: https://dashboard.mappit.app/auth/login
+  new_window: false
   highlight: false
 - name: Sign Up
-  link: /
-  new_window: true
+  link: https://dashboard.mappit.app/auth/register
+  new_window: false
   highlight: true
