--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,39 +1,18 @@
 - links:
   - name: Pricing
-    link: /pricing/
-  - name: Blog
-    link: /blog/
-  - name: About
-    link: /about/
-  - name: Contact
-    link: /contact/
+    link: /#pricing
 - links:
   - name: Login
-    link: /
-    new_window: true
+    link: https://dashboard.mappit.app/auth/login
+    new_window: false
   - name: Sign Up
-    link: /
-    new_window: true
+    link: https://dashboard.mappit.app/auth/register
+    new_window: false
   - name: Docs
     link: /
     new_window: true
-  - name: Status
-    link: /
-    new_window: true
 - links:
-  - name: Facebook
-    link: https://facebook.com/cloudcannon/
-    new_window: true
-    social_icon: Facebook
   - name: Twitter
-    link: https://twitter.com/cloudcannon/
+    link: https://twitter.com/MappitAPI/
     social_icon: Twitter
     new_window: true
-  - name: YouTube
-    link: https://youtube.com/cloudcannon/
-    social_icon: YouTube
-    new_window: true
-  - name: RSS
-    link: /feed.xml
-    social_icon: RSS
-    new_window: false
