Use correct twitter link

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -13,6 +13,6 @@
     new_window: true
 - links:
   - name: Twitter
-    link: https://twitter.com/MappitAPI/
+    link: https://twitter.com/MappitApp/
     social_icon: Twitter
     new_window: true
