--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,3 +1,7 @@
+- name: Docs
+  link: https://docs.mappit.app
+  new_window: false
+  highlight: false
 - name: Pricing
   link: /#pricing
   new_window: false
