--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@
   link: https://www.youtube.com/channel/UCQzK8bAIBWbO0aI6OZpbGIA/
   new_window: true
   social_icon: YouTube
-- name: give
+- name: Give
   link: https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=DDNN7VEK2PNWW&source=url
   new_window: true
   highlight: true
