fix footer links from old defaults

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -7,10 +7,10 @@
     link: https://mailhide.io/e/kguqC
 - links:
   - name: Facebook
-    link: https://facebook.com/cloudcannon/
+    link: https://www.facebook.com/WinstonAssembly/
     new_window: true
     social_icon: Facebook
   - name: YouTube
-    link: https://youtube.com/cloudcannon/
+    link: https://www.youtube.com/channel/UCQzK8bAIBWbO0aI6OZpbGIA/
     social_icon: YouTube
     new_window: true
